--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,18 @@
   display: flex;
 	margin: 20px 0;
 }
+
+.form--container {
+	margin-bottom: 20px;
+	justify-content: space-between;
+	align-items: baseline;
+}
+
+.form__input {
+	padding: 6px;
+	margin: 0 4em;
+	font-size: 1em;
+	border: solid 1px #aaa;
+	border-radius: 2px;
+	width: 16em;
+}
