--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -6,3 +6,15 @@ Button, input {
 .leitarButton {
     padding: 5px;
 }
+
+.headerForm{
+    display: flex;
+	align-items: center;
+}
+
+@media (max-width: 650px) {
+    .headerForm{
+        display: none;
+    }
+  }
+  
