--- a/src/components/loginHeader/LoginHeader.css
+++ b/src/components/loginHeader/LoginHeader.css
@@ -4,15 +4,29 @@
 
 .user.info {
 	flex-direction: column;
+	margin-left: 10px;
+	padding: 5px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .user.profile {
 	width: 70px;
 	height: 70px;
-	border-radius: 40px
+	border-radius: 40px;
 }
 
 .user.profile.img {
 	max-width: 100%;
 	max-height: 100%;
+}
+
+.loginLink{
+	display: flex;
+	align-items: center;
+}
+
+.logout{
+	margin: 0;
 }
