--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -1,10 +1,13 @@
 Button, input {
     padding: 5px;
-    margin: 5px;
 }
 
 .leitarButton {
     padding: 5px;
+}
+
+.searchInput{
+    margin-right: 10px;
 }
 
 .headerForm{
@@ -12,7 +15,7 @@ Button, input {
 	align-items: center;
 }
 
-@media (max-width: 650px) {
+@media (max-width: 620px) {
     .headerForm{
         display: none;
     }
